kubernetes/production/api-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: codequal-api-lb
  namespace: codequal-prod
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "codequal-api"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
spec:
  type: LoadBalancer
  selector:
    app: codequal-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
